--- a/layouts/partials/related.html
+++ b/layouts/partials/related.html
@@ -3,7 +3,7 @@
 <div class="releated-post">
   <h3>Related Posts</h3>
   {{ range . }}
-  <i class="fas fa-paperclip"></i>
+  <!-- <i class="fas fa-paperclip"></i> -->
   <a href="{{ .RelPermalink }}">{{ .Title }}</a>
   <br>
   {{ end }}
