--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -18,8 +18,8 @@
   <link rel="alternate" type="application/rss+xml" href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" title="{{ .Site.Title }}">
   <!-- Font Awesome -->
   <!-- <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet"> -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-  {{- if or .Params.enableMathJax .Site.Params.enableMathJax }}
+  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet"> -->
+  <!-- {{- if or .Params.enableMathJax .Site.Params.enableMathJax }}
   <link 
     rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" 
     integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" 
@@ -36,5 +36,5 @@
     crossorigin="anonymous" 
     onload="renderMathInElement(document.body);">
   </script>  
-  {{- end }}
+  {{- end }} -->
 </head>
