--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,12 +12,14 @@
   <nav class="fontawesome">
     {{ if .Site.Social.github }}
     <a href="{{ .Site.Social.github }}" target="_blank">
-        <i title="GitHub" class="fab fa-github"></i>
+        <!-- <i title="GitHub" class="fab fa-github"></i> -->
+		GitHub
     </a>
     {{ end }}
     {{ if .Site.Social.rss }}
     <a href="{{ "index.xml" | absLangURL }}" target="_blank">
-        <i title="RSS" class="fas fa-rss"></i>
+        <!-- <i title="RSS" class="fas fa-rss"></i> -->
+		RSS
     </a>
     {{ end }}
   </nav>
