--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,7 +13,7 @@
   <link rel="manifest" href="{{ .Site.BaseURL }}site.webmanifest">
 
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/index.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/classes.css">
+  <!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}css/classes.css"> -->
   <link rel="canonical" href="{{ .Permalink }}">
   <link rel="alternate" type="application/rss+xml" href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" title="{{ .Site.Title }}">
   <!-- Font Awesome -->
