--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,4 +1,4 @@
-@media (min-width: 50em) {
+/* @media (min-width: 50em) {
   @font-face {
     font-family: "PT Sans";
     src: local("PT Sans"), local("PTSans-Regular"),
@@ -14,14 +14,14 @@
     font-weight: bold;
     font-style: normal;
   }
-}
+} */
+@font-face {font-family: "Meera";
+	src: url("../fonts/Meera.woff2") format("woff2"), /* chrome、firefox */
+	url("../fonts/Meera.woff") format("woff"), /* chrome、firefox */
+	url("../fonts/Meera.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  }
 
-@font-face {
-  font-family: "Meera";
-  src: local("Meera"), url("../fonts/Meera.ttf") format("ttf");
-  font-weight: normal;
-  font-style: normal;
-}
+
 
 * {
   scrollbar-color: #202324 #454a4d;
@@ -57,8 +57,9 @@ html {
 }
 
 body {
-  font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Helvetica Neue",
-    "Segoe UI", "Roboto", sans-serif;
+  /* font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Helvetica Neue",
+    "Segoe UI", "Roboto", sans-serif; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",sans-serif;
   font-weight: 400;
   line-height: 1.6;
   margin: 0;
@@ -239,3 +240,61 @@ body > footer {
 li p {
   margin: 0;
 }
+
+
+.archive li {
+	font-size: 1.1em;
+  }
+  
+  .archive time {
+	display: inline-block;
+	min-width: 10ch;
+	margin: 0 .2em;
+  }
+  
+  .hidden {
+	display: none;
+  }
+  
+  .more {
+	margin: 2em 0 1em;
+  }
+  
+  .more a {
+	border-radius: 2px;
+	border: 1.5px solid #68f;
+	padding: .4em .8em;
+	transition: .2s;
+  }
+  
+  .more a:hover {
+	color: #fff;
+	background: #68f;
+	text-decoration: inherit;
+  }
+  
+  /***** custom *****/
+  .fontawesome a {
+	text-decoration: none;
+  }
+  
+  .post-meta {
+	color: #8e8e91;
+  }
+  
+  .comments-item {
+	margin-top: 10%;
+  }
+  
+  .foot {
+	/* font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", "Roboto", sans-serif; */
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",sans-serif;
+	margin: 1%;
+	color: #8e8e91;
+	text-align: center;
+  }
+  
+  .foot a:hover {
+	text-decoration: underline;
+	color: #0000EE;
+  }
