--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -25,4 +25,4 @@
   <link rel="canonical" href="{{ .Permalink }}">
   <link rel="alternate" type="application/rss+xml" href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" title="{{ .Site.Title }}">
 
-</head>`
+</head>
